--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
   "name": "ttl128",
-  "version": "0.0.1",
-  "private": "true",
+  "version": "1.0.0",
+  "private": "false",
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack && node dist/index.js"
+  },
   "dependencies": {
-    "express": "3.0.0alpha4",
-    "jade": "*",
-    "nib": "*",
-    "passport": "*",
-    "passport-google": "*",
-    "sanitizer": "*",
-    "socket.io": "*",
-    "stylus": "*"    
+    "express": "^4.18.1",
+    "express-session": "^1.17.2",
+    "nib": "^1.1.2",
+    "passport": "^0.5.2",
+    "passport-google-oauth": "^2.0.0",
+    "pug": "^3.0.2",
+    "sanitizer": "^0.1.3",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
+    "stylus": "^0.57.0"
+  },
+  "devDependencies": {
+    "@types/express-session": "^1.17.4",
+    "@types/express": "^4.17.13",
+    "@types/nib": "^1.1.0",
+    "@types/node": "^17.0.38",
+    "@types/passport-google-oauth": "^1.0.42",
+    "@types/passport": "^1.0.7",
+    "@types/pug": "^2.0.6",
+    "@types/stylus": "^0.48.38",
+    "eslint": "^8.15.0",
+    "stylus-loader": "^6.2.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0",
+    "webpack": "^5.72.1"
   }
 }
